test/types/enum/deitz/test_enum6.good
Error: Enumerator value for NEG must be int parameter (test_enum6.chpl:7)
